--- a/app/views/vitrine/index.html.haml
+++ b/app/views/vitrine/index.html.haml
@@ -3,4 +3,6 @@
 
 .row
   .small-12.columns
-    test
+    = link_to "Versions", td_versions_path
+  .small-12.columns
+    = link_to "Tag Definitions", tag_definitions_path
